--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,159 @@
-/*
-Colors:
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+h1, h2, h3, p, a, figcaption {
+    color:  #1A1A1A;
+    font-family: Helvetica, Arial, sans-serif;
+    padding: 10px 0;
+}
+h1 {
+    font-size: 70px;
+}
+h2 {
+    font-size: 40px;
+}
+h3 {
+    font-size: 30px;
+}
 
-Text: 1A1A1A
-Green: #00B172
-White: #FFF
+/*Header */
+#logo {
+    width: 170px;
+    height: 50px;
+}
+#header {
+    z-index: 1;
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10px;
+    background-color: white;
+    width: 100%;
+}
+#header ul {
+    list-style: none;
+    display: flex;
+    border-color: #0e0f0e;
+}
+#header a {
+    text-decoration: none;
+    color: black;
+    margin: 0 35px;
 
-*/
+}
+
+/*Central photo*/
+#main-photo {
+    display: flex;
+    flex-direction: column;
+    background-image: url("../images/landing.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+#main-photo h1 {
+    color: white;
+    font-size: 80px;
+    width: 60%;
+    text-align: center;
+}
+#main-photo h2 {
+    font-size: 35px;
+    font-weight: 100;
+    color: white;
+    text-align: center;
+    width: 60%;
+}
+
+/*Spotify Features*/
+main {
+    padding: 80px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+main h2 {
+    text-align: center;
+    width: 400px;
+    border-bottom: 3px solid #00B172;
+    padding-bottom: 10px;
+    margin-bottom: 100px;
+}
+main h3 {
+    color: #00B172;
+}
+main article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 60%;
+}
+main p {
+    width: 80%;
+    justify-content: center;
+}
+#spotify-features {
+    display: flex;
+    justify-content: space-evenly;
+    align-content: space-between;
+}
+#spotify-features img {
+    height: 150px;
+    margin-bottom: 40px;
+}
+
+/*Green Section*/
+#green-section {
+    background-color: #00B172;
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    align-items: center;
+    padding: 40px 10px;
+}
+
+#green-section h2, #green-section h3, #green-section p {
+    color: white;
+}
+
+.column { 
+    flex-direction: column;
+    z-index: 1;
+}
+.column article {
+    padding: 20px
+}
+
+#green-section h2 {
+    border-bottom: 4px solid white;
+    font-size: 45px;
+    margin: 20px;
+}
+
+#green-section p {
+    font-weight: lighter;
+    width: 50%;
+}
+
+#logo-white {
+    width: 10em;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    margin-right: 200px;
+    z-index: 2;
+    }
+
+#kanye {
+    float: right;
+    align-items: center;
+    width: 19em;
+    margin: 40px 20px;
+}
